--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -89,4 +89,4 @@ release:
 
   footer: |
     ---
-    **Full Changelog**: https://github.com/{{ .Env.GITHUB_REPOSITORY | default "dev-pi2pie/git-worktree-tasks" }}/compare/{{ .PreviousTag }}...{{ .Tag }}
+    **Full Changelog**: https://github.com/{{ .Env.GITHUB_REPOSITORY }}/compare/{{ .PreviousTag }}...{{ .Tag }}
