refactor: simplify GoReleaser configuration by removing unnecessary hooks and comments

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,15 +1,9 @@
-# GoReleaser configuration for git-worktree-tasks
-# https://goreleaser.com/customization/
-
+# GoReleaser configuration for Git Worktree Tasks
 version: 2
 
-before:
-  hooks:
-    - go mod tidy
-    - go test ./...
-
 builds:
-  - env:
+  - binary: gwtt
+    env:
       - CGO_ENABLED=0
     goos:
       - linux
@@ -18,26 +12,15 @@ builds:
     goarch:
       - amd64
       - arm64
-    # Skip combinations that don't make sense
-    ignore:
-      - goos: windows
-        goarch: arm64
     ldflags:
-      - -s -w
-      - -X main.version={{.Version}}
-      - -X main.commit={{.ShortCommit}}
-      - -X main.date={{.Date}}
-    binary: gwtt
+      - -s -w -X github.com/dev-pi2pie/git-worktree-tasks/cli.Version={{.Version}}
 
 archives:
   - name_template: >-
       {{ .ProjectName }}_
       {{- .Version }}_
-      {{- title .Os }}_
-      {{- if eq .Arch "amd64" }}x86_64
-      {{- else if eq .Arch "386" }}i386
-      {{- else }}{{ .Arch }}{{ end }}
-      {{- if .Arm }}v{{ .Arm }}{{ end }}
+      {{- .Os }}_
+      {{- .Arch }}
     formats:
       - tar.gz
     format_overrides:
@@ -49,44 +32,21 @@ archives:
       - LICENSE*
 
 checksum:
-  name_template: 'checksums.txt'
-
-snapshot:
-  version_template: "{{ incpatch .Version }}-next"
+  name_template: "checksums.txt"
 
 changelog:
-  use: github
   sort: asc
+  abbrev: 7
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
-      - '^chore:'
-      - '^ci:'
-      - 'README'
-      - 'typo'
-  groups:
-    - title: Features
-      regexp: '^feat:'
-      order: 0
-    - title: Bug Fixes
-      regexp: '^fix:'
-      order: 1
-    - title: Others
-      order: 999
-  # Abbreviated commits are enabled by default in v2
-  abbrev: 7
+      - "^docs:"
+      - "^test:"
+      - Merge pull request
+      - Merge branch
 
 release:
-  # Determine pre-release status from tag name
   prerelease: auto
-  mode: append
   header: |
-    ## Release {{ .Tag }}
-
-    **Built:** {{ .Date }}
     **Commit:** {{ .ShortCommit }}
-
   footer: |
-    ---
     **Full Changelog**: https://github.com/{{ .Env.GITHUB_REPOSITORY }}/compare/{{ .PreviousTag }}...{{ .Tag }}
