--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 100
+          fetch-depth: 0
+          fetch-tags: true
           ref: ${{ inputs.tag || github.ref }}
 
       - name: Set up Go
@@ -60,7 +61,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          fetch-depth: 100
+          fetch-depth: 0
+          fetch-tags: true
           ref: ${{ inputs.tag || github.ref }}
 
       - name: Set up Go
