--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -41,9 +41,32 @@ changelog:
   filters:
     exclude:
       - "^docs:"
-      - "^test:"
       - Merge pull request
       - Merge branch
+  groups:
+    - title: "Features"
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 0
+    - title: "Fixes"
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+      order: 1
+    - title: "Performance"
+      regexp: '^.*?perf(\([[:word:]]+\))??!?:.+$'
+      order: 2
+    - title: "Refactor"
+      regexp: '^.*?refactor(\([[:word:]]+\))??!?:.+$'
+      order: 3
+    - title: "Chore"
+      regexp: '^.*?chore(\([[:word:]]+\))??!?:.+$'
+      order: 5
+    - title: "Tests"
+      regexp: '^.*?test(\([[:word:]]+\))??!?:.+$'
+      order: 6
+    - title: "CI"
+      regexp: '^.*?ci(\([[:word:]]+\))??!?:.+$'
+      order: 7
+    - title: "Other"
+      order: 999
 
 release:
   prerelease: auto
