--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -31,6 +31,7 @@ archives:
       # Only include these files (everything else excluded by default)
       - README.md
       - LICENSE*
+      - man/man1/*.1
 
 checksum:
   name_template: "checksums.txt"
